# ddd-study

./: .gitignore  pyproject.toml  pytest.ini
src/domain/entity/: batch.py  batch_errors.py
src/domain/service/: __init__.py  allocate_order_line.py
src/domain/value_object/: order_line.py
tests/integration/service/: test_allocate_order_line.py
tests/unit/entity/: test_batch.py
tests/unit/value_object/: test_order_line.py
